# botocaml

./: .gitignore  botocaml.opam  docker-compose.yml  dune-project  esy.json  flake.nix
.github/workflows/: default.yml
lib/: botocaml.ml  dune
lib/common/: auth.ml  common.ml  credentials.ml  dune  region.ml  request.ml  request.mli
lib/lambda/: dune  error.ml  lambda.ml  lambda.mli
lib/utils/: dune  utils.ml
test/integration/: dune  integration_tests.ml
test/localstack/: init.sh
test/localstack/lambda/exception/: exception.js
test/localstack/lambda/simple/: simple.js
test/unit/: dune  unit_tests.ml
