(library
  (package botocaml)
  (name lambda)
  (libraries 
    utils
    lwt
    curl
    ezcurl-lwt
    timedesc
    mirage-crypto
    uri
    yojson
    ;;
    common
  )
  (preprocess (pps 
    ppx_deriving.show
    ppx_deriving.eq
    ppx_yojson_conv
    ppx_fields_conv
    ppx_variants_conv
    ppx_string
  ))
)
